--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "ecommerce-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "ecommerce",
+    "api",
+    "rest",
+    "mongodb",
+    "express",
+    "jwt"
+  ],
+  "author": "Kaddouri",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.3",
