--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.10",
     "validator": "^13.15.20"
   },
   "devDependencies": {
