--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,13 @@ JWT_EXPIRE=30d
 CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
+
+# Email Configuration (Gmail)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your_email@gmail.com
+EMAIL_PASSWORD=your_app_password
+EMAIL_FROM=noreply@yourapp.com
+
+# Frontend URL (for password reset links)
+FRONTEND_URL=http://localhost:3000
